@@ -8,8 +8,6 @@
  */
 package org.opensearch.flowframework;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
 import org.apache.http.Header;
 import org.apache.http.HttpHeaders;
 import org.apache.http.HttpHost;
@@ -85,7 +83,7 @@ public abstract class FlowFrameworkRestTestCase extends OpenSearchRestTestCase {
                 "_cluster/settings",
                 null,
                 "{\"transient\":{\"plugins.flow_framework.enabled\":true}}",
-                ImmutableList.of(new BasicHeader(HttpHeaders.USER_AGENT, ""))
+                List.of(new BasicHeader(HttpHeaders.USER_AGENT, ""))
             );
             assertEquals(200, response.getStatusLine().getStatusCode());
 
@@ -96,7 +94,7 @@ public abstract class FlowFrameworkRestTestCase extends OpenSearchRestTestCase {
                 "_cluster/settings",
                 null,
                 "{\"persistent\":{\"plugins.ml_commons.only_run_on_ml_node\":false}}",
-                ImmutableList.of(new BasicHeader(HttpHeaders.USER_AGENT, ""))
+                List.of(new BasicHeader(HttpHeaders.USER_AGENT, ""))
             );
             assertEquals(200, response.getStatusLine().getStatusCode());
 
@@ -107,7 +105,7 @@ public abstract class FlowFrameworkRestTestCase extends OpenSearchRestTestCase {
                 "_cluster/settings",
                 null,
                 "{\"persistent\":{\"plugins.ml_commons.allow_registering_model_via_url\":true}}",
-                ImmutableList.of(new BasicHeader(HttpHeaders.USER_AGENT, ""))
+                List.of(new BasicHeader(HttpHeaders.USER_AGENT, ""))
             );
             assertEquals(200, response.getStatusLine().getStatusCode());
 
@@ -295,11 +293,11 @@ public abstract class FlowFrameworkRestTestCase extends OpenSearchRestTestCase {
      * @return a rest response
      */
     protected Response createWorkflow(Template template) throws Exception {
-        return TestHelpers.makeRequest(client(), "POST", WORKFLOW_URI, ImmutableMap.of(), template.toJson(), null);
+        return TestHelpers.makeRequest(client(), "POST", WORKFLOW_URI, Collections.emptyMap(), template.toJson(), null);
     }
 
     protected Response createWorkflowWithProvision(Template template) throws Exception {
-        return TestHelpers.makeRequest(client(), "POST", WORKFLOW_URI + "?provision=true", ImmutableMap.of(), template.toJson(), null);
+        return TestHelpers.makeRequest(client(), "POST", WORKFLOW_URI + "?provision=true", Collections.emptyMap(), template.toJson(), null);
     }
 
     /**
@@ -309,7 +307,7 @@ public abstract class FlowFrameworkRestTestCase extends OpenSearchRestTestCase {
      * @return a rest response
      */
     protected Response createWorkflowValidation(Template template) throws Exception {
-        return TestHelpers.makeRequest(client(), "POST", WORKFLOW_URI, ImmutableMap.of(), template.toJson(), null);
+        return TestHelpers.makeRequest(client(), "POST", WORKFLOW_URI, Collections.emptyMap(), template.toJson(), null);
     }
 
     /**
@@ -324,7 +322,7 @@ public abstract class FlowFrameworkRestTestCase extends OpenSearchRestTestCase {
             client(),
             "PUT",
             String.format(Locale.ROOT, "%s/%s", WORKFLOW_URI, workflowId),
-            ImmutableMap.of(),
+            Collections.emptyMap(),
             template.toJson(),
             null
         );
@@ -341,7 +339,7 @@ public abstract class FlowFrameworkRestTestCase extends OpenSearchRestTestCase {
             client(),
             "POST",
             String.format(Locale.ROOT, "%s/%s/%s", WORKFLOW_URI, workflowId, "_provision"),
-            ImmutableMap.of(),
+            Collections.emptyMap(),
             "",
             null
         );
@@ -358,7 +356,7 @@ public abstract class FlowFrameworkRestTestCase extends OpenSearchRestTestCase {
             client(),
             "POST",
             String.format(Locale.ROOT, "%s/%s/%s", WORKFLOW_URI, workflowId, "_deprovision"),
-            ImmutableMap.of(),
+            Collections.emptyMap(),
             "",
             null
         );
@@ -375,7 +373,7 @@ public abstract class FlowFrameworkRestTestCase extends OpenSearchRestTestCase {
             client(),
             "DELETE",
             String.format(Locale.ROOT, "%s/%s", WORKFLOW_URI, workflowId),
-            ImmutableMap.of(),
+            Collections.emptyMap(),
             "",
             null
         );
@@ -393,7 +391,7 @@ public abstract class FlowFrameworkRestTestCase extends OpenSearchRestTestCase {
             client(),
             "GET",
             String.format(Locale.ROOT, "%s/%s/%s?all=%s", WORKFLOW_URI, workflowId, "_status", all),
-            ImmutableMap.of(),
+            Collections.emptyMap(),
             "",
             null
         );
@@ -413,7 +411,7 @@ public abstract class FlowFrameworkRestTestCase extends OpenSearchRestTestCase {
             client(),
             "GET",
             String.format(Locale.ROOT, "%s/_search", WORKFLOW_URI),
-            ImmutableMap.of(),
+            Collections.emptyMap(),
             query,
             null
         );
@@ -438,7 +436,7 @@ public abstract class FlowFrameworkRestTestCase extends OpenSearchRestTestCase {
             client(),
             "GET",
             String.format(Locale.ROOT, "%s/state/_search", WORKFLOW_URI),
-            ImmutableMap.of(),
+            Collections.emptyMap(),
             query,
             null
         );
